// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomPage generateCustomPage: different navigations inbound navigation defined as array (for FCL) 1`] = `
Object {
  "routes": Array [
    Object {
      "name": "TestObjectPage",
      "pattern": "RootEntity({key}):?query:",
      "target": Array [
        "TestObjectPage",
      ],
    },
    Object {
      "name": "ChildEntityCustomPage",
      "pattern": "RootEntity({key})/navToChildEntity({navToChildEntityKey}):?query:",
      "target": Array [
        "TestObjectPage",
        "ChildEntityCustomPage",
      ],
    },
  ],
  "targets": Object {
    "ChildEntityCustomPage": Object {
      "id": "my.test.App.ext.customPage",
      "name": "sap.fe.core.fpm",
      "options": Object {
        "settings": Object {
          "entitySet": "ChildEntity",
          "navigation": Object {},
          "viewName": "my.test.App.ext.customPage.CustomPage",
        },
      },
      "type": "Component",
    },
    "TestObjectPage": Object {
      "options": Object {
        "settings": Object {
          "navigation": Object {
            "navToChildEntity": Object {
              "detail": Object {
                "route": "ChildEntityCustomPage",
              },
            },
          },
        },
      },
    },
  },
}
`;

exports[`CustomPage generateCustomPage: different navigations inbound navigation defined as array with max nesting for FCL 1`] = `
Object {
  "routes": Array [
    Object {
      "name": "TestObjectPage",
      "pattern": "RootEntity({key})/NestedEntiry({nestedKey}):?query:",
      "target": Array [
        "TestList",
        "TestNestedList",
        "TestObjectPage",
      ],
    },
    Object {
      "name": "ChildEntityCustomPage",
      "pattern": "RootEntity({key})/NestedEntiry({nestedKey})/navToChildEntity({navToChildEntityKey}):?query:",
      "target": Array [
        "ChildEntityCustomPage",
      ],
    },
  ],
  "targets": Object {
    "ChildEntityCustomPage": Object {
      "id": "my.test.App.ext.customPage",
      "name": "sap.fe.core.fpm",
      "options": Object {
        "settings": Object {
          "entitySet": "ChildEntity",
          "navigation": Object {},
          "viewName": "my.test.App.ext.customPage.CustomPage",
        },
      },
      "type": "Component",
    },
    "TestObjectPage": Object {
      "options": Object {
        "settings": Object {
          "navigation": Object {
            "navToChildEntity": Object {
              "detail": Object {
                "route": "ChildEntityCustomPage",
              },
            },
          },
        },
      },
    },
  },
}
`;

exports[`CustomPage generateCustomPage: different navigations simple inbound navigation 1`] = `
Object {
  "routes": Array [
    Object {
      "name": "ChildEntityCustomPage",
      "pattern": "undefined/navToChildEntity({navToChildEntityKey}):?query:",
      "target": "ChildEntityCustomPage",
    },
  ],
  "targets": Object {
    "ChildEntityCustomPage": Object {
      "id": "my.test.App.ext.customPage",
      "name": "sap.fe.core.fpm",
      "options": Object {
        "settings": Object {
          "entitySet": "ChildEntity",
          "navigation": Object {},
          "viewName": "my.test.App.ext.customPage.CustomPage",
        },
      },
      "type": "Component",
    },
    "TestObjectPage": Object {
      "options": Object {
        "settings": Object {
          "navigation": Object {
            "navToChildEntity": Object {
              "detail": Object {
                "route": "ChildEntityCustomPage",
              },
            },
          },
        },
      },
    },
  },
}
`;

exports[`CustomPage generateCustomPage: different versions latest version with minimal input 1`] = `
Object {
  "sap.app": Object {
    "id": "my.test.App",
  },
  "sap.ui5": Object {
    "dependencies": Object {
      "libs": Object {
        "sap.fe.templates": Object {},
      },
      "minUI5Version": "1.94.0",
    },
    "routing": Object {
      "routes": Array [
        Object {
          "name": "RootEnityCustomPage",
          "pattern": "RootEnity({key}):?query:",
          "target": "RootEnityCustomPage",
        },
      ],
      "targets": Object {
        "RootEnityCustomPage": Object {
          "id": "my.test.App.ext.customPage",
          "name": "sap.fe.core.fpm",
          "options": Object {
            "settings": Object {
              "entitySet": "RootEnity",
              "navigation": Object {},
              "viewName": "my.test.App.ext.customPage.CustomPage",
            },
          },
          "type": "Component",
        },
        "TestObjectPage": Object {},
      },
    },
  },
}
`;

exports[`CustomPage generateCustomPage: different versions latest version with minimal input 2`] = `
"<mvc:View xmlns:core=\\"sap.ui.core\\" xmlns:mvc=\\"sap.ui.core.mvc\\" xmlns=\\"sap.m\\"
	xmlns:html=\\"http://www.w3.org/1999/xhtml\\" controllerName=\\"my.test.App.ext.customPage.CustomPage\\">
	
	<App>
		<pages>
			<Page title=\\"CustomPage\\">
				<content></content>
			</Page>
		</pages>
	</App>
	
</mvc:View>"
`;

exports[`CustomPage generateCustomPage: different versions latest version with minimal input 3`] = `
"sap.ui.define(
    [
        'sap/fe/core/PageController'
    ],
    function(PageController) {
        'use strict';

        return PageController.extend('my.test.App.ext.customPage.CustomPage', {
            /**
             * Called when a controller is instantiated and its View controls (if available) are already created.
             * Can be used to modify the View before it is displayed, to bind event handlers and do other one-time initialization.
             * @memberOf my.test.App.ext.customPage.CustomPage
             */
            //	onInit: function () {
            //
            //	},

            /**
             * Similar to onAfterRendering, but this hook is invoked before the controller's View is re-rendered
             * (NOT before the first rendering! onInit() is used for that one!).
             * @memberOf my.test.App.ext.customPage.CustomPage
             */
            //	onBeforeRendering: function() {
            //
            //	},

            /**
             * Called when the View has been rendered (so its HTML is part of the document). Post-rendering manipulations of the HTML could be done here.
             * This hook is the same one that SAPUI5 controls get after being rendered.
             * @memberOf my.test.App.ext.customPage.CustomPage
             */
            //	onAfterRendering: function() {
            //
            //	},

            /**
             * Called when the Controller is destroyed. Use this one to free resources and finalize activities.
             * @memberOf my.test.App.ext.customPage.CustomPage
             */
            //	onExit: function() {
            //
            //	}
        });
    }
);
"
`;

exports[`CustomPage generateCustomPage: different versions with older but supported UI5 version 1`] = `
Object {
  "sap.app": Object {
    "id": "my.test.App",
  },
  "sap.ui5": Object {
    "dependencies": Object {
      "libs": Object {
        "sap.fe.templates": Object {},
      },
      "minUI5Version": "1.84.0",
    },
    "routing": Object {
      "routes": Array [
        Object {
          "name": "RootEnityCustomPage",
          "pattern": "RootEnity({key}):?query:",
          "target": "RootEnityCustomPage",
        },
      ],
      "targets": Object {
        "RootEnityCustomPage": Object {
          "options": Object {
            "settings": Object {
              "entitySet": "RootEnity",
              "navigation": Object {},
            },
          },
          "viewId": "CustomPageView",
          "viewName": "my.test.App.ext.customPage.CustomPage",
        },
        "TestObjectPage": Object {},
      },
    },
  },
}
`;

exports[`CustomPage generateCustomPage: different versions with older but supported UI5 version 2`] = `
"<mvc:View xmlns:core=\\"sap.ui.core\\" xmlns:mvc=\\"sap.ui.core.mvc\\" xmlns=\\"sap.m\\"
	xmlns:html=\\"http://www.w3.org/1999/xhtml\\" controllerName=\\"my.test.App.ext.customPage.CustomPage\\">
	
	<App>
		<pages>
			<Page title=\\"CustomPage\\">
				<content></content>
			</Page>
		</pages>
	</App>
	
</mvc:View>"
`;

exports[`CustomPage generateCustomPage: different versions with older but supported UI5 version 3`] = `
"sap.ui.define(
    [
        'sap/ui/core/mvc/Controller' /** If UI5 version 1.94 or newer can be used, the change the base controller to sap/fe/core/PageController to get full FEv4 FPM supprot */
    ],
    function(PageController) {
        'use strict';

        return PageController.extend('my.test.App.ext.customPage.CustomPage', {
            /**
             * Called when a controller is instantiated and its View controls (if available) are already created.
             * Can be used to modify the View before it is displayed, to bind event handlers and do other one-time initialization.
             * @memberOf my.test.App.ext.customPage.CustomPage
             */
            //	onInit: function () {
            //
            //	},

            /**
             * Similar to onAfterRendering, but this hook is invoked before the controller's View is re-rendered
             * (NOT before the first rendering! onInit() is used for that one!).
             * @memberOf my.test.App.ext.customPage.CustomPage
             */
            //	onBeforeRendering: function() {
            //
            //	},

            /**
             * Called when the View has been rendered (so its HTML is part of the document). Post-rendering manipulations of the HTML could be done here.
             * This hook is the same one that SAPUI5 controls get after being rendered.
             * @memberOf my.test.App.ext.customPage.CustomPage
             */
            //	onAfterRendering: function() {
            //
            //	},

            /**
             * Called when the Controller is destroyed. Use this one to free resources and finalize activities.
             * @memberOf my.test.App.ext.customPage.CustomPage
             */
            //	onExit: function() {
            //
            //	}
        });
    }
);
"
`;
